# ray-tracer

./: .gitignore  CMakeLists.txt  Color.cpp  Color.h  Input_processor.cpp  Input_processor.h  LICENSE  LightSource.cpp  LightSource.h  Main.cpp  Object.cpp  Point3.cpp  Point3.h  Ray.cpp  Ray.h  Readme.md  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h  depth_of_field.txt  sample1_input(more light).txt  sample2_input(less light).txt  setup.txt  sphere_plane.txt  wood.ppm
